--- a/src/main/resources/templates/salaryItem.html
+++ b/src/main/resources/templates/salaryItem.html
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <style type="text/css">
-        table {
-            font-family: verdana, arial, sans-serif;
-            font-size: 11px;
-            color: #333333;
-            border-width: 1px;
-            border-color: #666666;
-            border-collapse: collapse;
-        }
-
-        th {
-            border-width: 1px;
-            padding: 8px;
-            border-style: solid;
-            border-color: #666666;
-            background-color: #dedede;
-        }
-
-        td {
-            border-width: 1px;
-            padding: 8px;
-            border-style: solid;
-            border-color: #666666;
-            background-color: #ffffff;
-        }
-
-        input[type = "text"] {
-            border: none;
-            width: 100%
-        }
-    </style>
-    <script th:src="@{/js/jquery.js}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>薪酬标准</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
+            var idNum = 100;
             //添加，页面增加新的空行
             $('#insert').click(function () {
-                var tr = '<tr>\n' +
+                let tr = '<tr>\n' +
                     '            <input type="hidden" name="id" >\n' +
                     '            <input type="hidden" name="modelStatus" value="2">' +
-                    '            <td align="center">\n' +
-                    '                <input type="radio" name="dr" class="dr">\n' +
-                    '            </td>\n' +
-                    '            <td >\n' +
-                    '            </td>\n' +
-                    '            <td>\n' +
-                    '                <input type="text" name="itemCode" class="si" placeholder="必填">\n' +
-                    '            </td>\n' +
-                    '            <td>\n' +
-                    '                <input type="text" name="itemName" class="si" placeholder="必填">\n' +
-                    '            </td>\n' +
-                    '            <td>\n' +
-                    '                <input type="text" name="introduction" class="si" >\n' +
+                    '            <td align="center">' +
+                    '            <div class="custom-control custom-radio">\n' +
+                    '                <input type="radio" name="dr"\n' +
+                    '                     class="custom-control-input dr" value="-1" id="r">\n' +
+                    '                        <label class="custom-control-label" id="l1"></label>\n' +
+                    '                    </div>' +
                     '            </td>\n' +
                     '            <td align="center">\n' +
-                    '                <input type="checkbox" name="enable" value="3" class="si" >\n' +
+                    '            </td>\n' +
+                    '            <td align="center">\n' +
+                    '                <div class="col-sm-10">\n' +
+                    '                        <input type="text" class="form-control si"  placeholder="必填" name="itemCode">\n' +
+                    '                    </div>\n' +
+                    '            </td align="center">\n' +
+                    '            <td align="center">\n' +
+                    '                <div class="col-sm-10">\n' +
+                    '                        <input type="text" class="form-control si"  placeholder="必填" name="itemName">\n' +
+                    '                    </div>\n' +
+                    '            </td align="center">\n' +
+                    '            <td align="center">\n' +
+                    '                <div class="col-sm-10">\n' +
+                    '                        <input type="text" class="form-control si" name="introduction" >\n' +
+                    '                    </div>\n' +
+                    '            </td>\n' +
+                    '            <td align="center">\n' +
+                    '                <div class="custom-control custom-switch">\n' +
+                    '                        <input type="checkbox" class="custom-control-input si" value="3"\n' +
+                    '                               name="enable" id="c">\n' +
+                    '                        <label class="custom-control-label" id="l2"></label>\n' +
+                    '                    </div>\n' +
                     '            </td>\n' +
                     '        </tr>';
                 $(" table").append(tr);
+                $("#r").attr("id", 'r' + idNum + '');
+                $("#l1").attr("for", 'r' + idNum + '');
+                $("#l1").attr("id", 'l1' + idNum + '');
+                $("#c").attr("id", 'c' + idNum + '');
+                $("#l2").attr("for", 'c' + idNum + '');
+                $("#l2").attr("id", 'l2' + idNum + '');
+                idNum++;
             });
             //获取表格的修改状态
             $(".si").change(function () {
-                var hidden = $(this).parent().parent().children("input:last");
+                var hidden = $(this).parent().parent().parent().children("input:last");
                 if (hidden.val() == 0) {
                     hidden.val(1);
                 }
@@ -108,7 +111,7 @@
             };
             $('#save').click(function () {
                 $('#saveSalaryItemForm :radio').removeAttr("name");
-                var jsonStr = $('#saveSalaryItemForm').serializeJson();
+                let jsonStr = $('#saveSalaryItemForm').serializeJson();
                 $.ajax({
                     type: "POST",
                     url: "/saveSalaryItem",
@@ -126,12 +129,16 @@
             });
             //删除，异步删除，并remove元素
             $('#delete').click(function () {
-                var radio = $('#saveSalaryItemForm :radio:checked');
-                var id = radio.val();
+                let radio = $('#saveSalaryItemForm :radio:checked');
+                let id = radio.val();
+                if (id == -1) {
+                    radio.parent().parent().parent().remove();
+                    return;
+                }
                 if (confirm("确认删除吗?")) {
                     $.get("deleteSalaryItem", {"id": id}, function (data) {
                         if (data == "success") {
-                            radio.parent().parent().remove();
+                            radio.parent().parent().parent().remove();
                             alert("删除成功!");
                         } else {
                             alert("出现了一点小错误");
@@ -146,54 +153,81 @@
                 }
             });
         });
-
     </script>
+    <style type="text/css">
+        th{
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
-<div>
-    <button id="insert">新增</button>
-    <button id="save">保存</button>
-    <button id="cancel">取消</button>
-    <button id="delete">删除</button>
+<div style="margin: 10px">
+    <button type="button" class="btn btn-outline-primary" id="insert">新增</button>
+    <button type="button" class="btn btn-outline-success" id="save">保存</button>
+    <button type="button" class="btn btn-outline-secondary" id="cancel">取消</button>
+    <button type="button" class="btn btn-outline-danger" id="delete">删除</button>
 </div>
 <div>
     <form name="salaryItemList" id="saveSalaryItemForm">
-        <table id="salaryItemTable">
+        <table class="table table-bordered" id="salaryItemTable">
             <thead>
-            <th>选择</th>
-            <th>序号</th>
-            <th>薪酬项目编码</th>
-            <th>薪酬项目名称</th>
-            <th>薪酬项目描述</th>
-            <th>是否启用</th>
+            <tr>
+                <th>选择</th>
+                <th>序号</th>
+                <th>薪酬项目编码</th>
+                <th>薪酬项目名称</th>
+                <th>薪酬项目描述</th>
+                <th>是否启用</th>
+            </tr>
             </thead>
             <tbody>
             <tr th:each="salaryItem,status:${salaryItemList}">
                 <input type="hidden" th:name="id" th:value="${salaryItem.getId()}">
                 <input type="hidden" th:name="modelStatus" value="0">
                 <td align="center">
-                    <input type="radio" class="dr" name="dr" th:value="${salaryItem.getId()}">
+                    <div class="custom-control custom-radio">
+                        <input type="radio" name="dr"
+                               class="custom-control-input dr" th:value="${salaryItem.getId()}"
+                               th:id="customRadio+${status.count}">
+                        <label class="custom-control-label" th:for="customRadio+${status.count}"></label>
+                    </div>
                 </td>
-                <td th:text="${status.count}">
+                <td th:text="${status.count}" align="center">
                 </td>
-                <td>
-                    <input type="text" th:name="itemCode" th:value="${salaryItem.getItemCode()}" class="si"
-                           placeholder="必填">
+                <td align="center">
+                    <!--<input type="text" th:name="itemCode" th:value="${salaryItem.getItemCode()}" class="si"-->
+                           <!--&gt;-->
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control si"  placeholder="必填" th:name="itemCode" th:value="${salaryItem.getItemCode()}">
+                    </div>
                 </td>
-                <td>
-                    <input type="text" th:name="itemName" th:value="${salaryItem.getItemName()}" class="si"
-                           placeholder="必填">
+                <td align="center">
+                    <!--<input type="text" th:name="itemName" th:value="${salaryItem.getItemName()}" class="si"-->
+                           <!--placeholder="必填">-->
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control si"  placeholder="必填" th:name="itemName" th:value="${salaryItem.getItemName()}">
+                    </div>
                 </td>
-                <td>
-                    <input type="text" th:name="introduction" th:value="${salaryItem.getIntroduction()}" class="si"
-                    >
+                <td align="center">
+                    <!--<input type="text" th:name="introduction" th:value="${salaryItem.getIntroduction()}" class="si">-->
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control si" th:name="introduction" th:value="${salaryItem.getIntroduction()}">
+                    </div>
                 </td>
                 <td th:if="${salaryItem.getEnable()}==3" align="center">
-                    <input type="checkbox" th:name="enable"
-                           checked="checked" value="3" class="si">
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input si" checked="checked" value="3"
+                               name="enable" th:id="customSwitch+${status.count}">
+                        <label class="custom-control-label" th:for="customSwitch+${status.count}"></label>
+                    </div>
+
                 </td>
                 <td th:if="${salaryItem.getEnable()}==4" align="center">
-                    <input type="checkbox" th:name="enable" value="3" class="si">
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input si" value="3"
+                               name="enable" th:id="customSwitch+${status.count}">
+                        <label class="custom-control-label" th:for="customSwitch+${status.count}"></label>
+                    </div>
                 </td>
             </tr>
             </tbody>
