--- a/src/main/resources/templates/daibanliebiao.html
+++ b/src/main/resources/templates/daibanliebiao.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -35,37 +37,37 @@
 		
 		<div class="x_content">
 
-                    <ul>
-			
-                    <form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
-
-               <li>       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">任务名称： 
+          <form th:action="@{/waitList}" method="get" id="frm" name="frm" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+              <input type="hidden" name="pageIndex" id="pageIndex" value="1"/>
+              <ul>
+                 <li>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">姓名：
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" th:value="${archiveTools.name}" name="name" id="name" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
-                     </li>
-                    
-
-                      
-                      
-                   <li>    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">待办类型： </label>
+                 </li>
+                  <li>
+                       <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">待办类型:</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <select class="form-control">
-                            <option>请选择</option>
-                            <option>Option one</option>
-                            <option>Option two</option>
-                            <option>Option three</option>
-                            <option>Option four</option>
-                          </select>
+                            <div class="col-md-9 col-sm-9 col-xs-12">
+                                <select class="form-control" name="reviewStatus">
+                                    <option value="">请选择</option>
+                                    <option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==revStatus"
+                                             th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archiveTools.reviewStatus})"
+                                             th:value="${dictionary.id}">
+                                    </option>
+
+                                </select>
+                            </div>
                         </div>
-                   </div></li>
-                      
-                      
-                <li>       <div class="form-group">
+                   </div>
+                  </li>
+
+               <!-- <li>       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">达到日期：</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                         <fieldset>
@@ -81,51 +83,97 @@
                         </fieldset> 
                         </div>
                       </div>
-                     </li> 
-                      
-                      
-                      
-                <li>     <div class="ln_solid"></div>
+                     </li> -->
+
+                     <li>
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                          
                           <button type="submit" class="btn btn-success">查询</button>
                         </div>
-                      </div></li> 
+                      </div>
+                     </li>
+              </ul>
+          </form>
 
-                 </form></ul>
-                  </div>
-		
+            <div class="col-sm-12">
+            <table id="datatable-fixed-header" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="datatable-fixed-header_info"><thead>
+            <button type="submit" id="deal" name="deal" class="btn btn-round btn-info">处理</button>&nbsp;&nbsp;&nbsp;
+            <button type="submit" class="btn btn-success">明细</button>
+            <tr role="row">
+                <th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 40px;">选择</th>
+                <th class="sorting_asc" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 101px;">姓名</th>
+                <th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 101px;">待办类型</th>
+                <th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 101px;">日期</th>
+            </thead>
+                <tbody>
+                <tr th:each="archive:${pageSurport.dataList}" role="row" class="odd">
+                    <!--<input type="text" name="id" id="id" th:value="${archive.id}"/>-->
+                    <td><input type="radio" name="xuanze" th:id="${archive.id}" th:status="${archive.reviewStatuss}" value=""/></td>
+                    <td class="sorting_1" th:text="${archive.name}"></td>
+                    <td th:text="${archive.reviewStatuss}"></td>
+                    <td th:text="${#dates.format(archive.createDate,'yyyy-MM-dd')}"></td>
+                </tr>
 
-		<div class="col-sm-12"><table id="datatable-fixed-header" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="datatable-fixed-header_info"><thead>
-                        <tr role="row">
-                        	<th class="sorting_asc" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 194px;">待办类型</th>
-                        	<th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 312px;">待办任务名称</th>
-                        	<th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 143px;">达到日期</th>
-                        	<th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 143px;">操作</th>
-                      </thead>
+                </tbody>
+            </table></div>
 
-                      <tbody>
+            <div class="row">
 
-                      <tr role="row" class="odd">
-                          <td class="sorting_1">Airi Satou</td>
-                          <td>Accountant</td>
-                          <td>Tokyo</td>
-                          <td><a href="#">处理</a> &nbsp  <a href="#">明细</a></td>
-                        </tr>
-                        <tr role="row" class="even">
-                          <td class="sorting_1">Angelica Ramos</td>
-                          <td>Chief Executive Officer (CEO)</td>
-                          <td>London</td>
-                          <td><a href="#">处理</a> &nbsp  <a href="#">明细</a></td>
-                        </tr>
-                      </tbody>
-                    </table></div>
-                     <div class="col-sm-5">
-        		
-        	</div>
-		<div  class="col-sm-7"><div  class="dataTables_paginate paging_simple_numbers" id="datatable-checkbox_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="datatable-checkbox_previous"><a href="#" aria-controls="datatable-checkbox" data-dt-idx="0" tabindex="0">首页</a></li><li class="paginate_button active"><a href="#" aria-controls="datatable-checkbox" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button "><a href="#" aria-controls="datatable-checkbox" data-dt-idx="2" tabindex="0">2</a></li><li class="paginate_button "><a href="#" aria-controls="datatable-checkbox" data-dt-idx="3" tabindex="0">3</a></li><li class="paginate_button "><a href="#" aria-controls="datatable-checkbox" data-dt-idx="4" tabindex="0">4</a></li><li class="paginate_button "><a href="#" aria-controls="datatable-checkbox" data-dt-idx="5" tabindex="0">5</a></li><li class="paginate_button "><a href="#" aria-controls="datatable-checkbox" data-dt-idx="6" tabindex="0">6</a></li><li class="paginate_button next" id="datatable-checkbox_next"><a href="#" aria-controls="datatable-checkbox" data-dt-idx="7" tabindex="0">下一页</a><a href="#" aria-controls="datatable-checkbox" data-dt-idx="7" tabindex="0">末页</a></li></ul></div></div>
-		
+                <div class="col-sm-5">
+                    <div class="dataTables_info" id="datatable_info" role="status"
+                         aria-live="polite">当前页<span th:text="${pageSurport.pageIndex}"></span> /<span th:text="${pageSurport.totalPageCount }"></span>页 </div>
+                </div>
+
+                <div class="col-sm-7">
+                    <div class="dataTables_paginate paging_simple_numbers" id="datatable_paginate">
+                        <ul class="pagination">
+					<span th:if="${pageSurport.pageIndex }>1" class="pagination" id="span1">
+							<li class="paginate_button" id="datatable_previous">
+								<a th:href="'javascript:page_nav(document.forms[0],1)'" aria-controls="datatable" data-dt-idx="7" tabindex="0">
+									首页</a>
+							</li>
+							<li class="paginate_button">
+								<a th:href="'javascript:page_nav(document.forms[0],'+(${pageSurport.pageIndex }-1)+')'" aria-controls="datatable" data-dt-idx="7" tabindex="0">
+									上一页</a>
+							</li>
+					</span>
+                            <span th:if="${pageSurport.pageIndex }<${pageSurport.totalPageCount }" class="pagination" id="span2">
+							<li class="paginate_button ">
+								<a th:href="'javascript:page_nav(document.forms[0],'+(${pageSurport.pageIndex }+1)+')'" aria-controls="datatable" data-dt-idx="7" tabindex="0">
+									下一页</a>
+							</li>
+							<li class="paginate_button" id="datatable_next">
+								<a th:href="'javascript:page_nav(document.forms[0],'+(${pageSurport.totalPageCount })+')'" aria-controls="datatable" data-dt-idx="7" tabindex="0">
+									末页 </a>
+							</li>
+						</span>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript">
+            function page_nav(frm, num) {
+                frm.pageIndex.value = num;
+                frm.submit();
+            }
+            $("#deal").click(function () {
+                $('#datatable-fixed-header :radio').each(function(){
+                    if(this.checked){
+                        var id=$(this).attr("id");
+                        var status=$(this).attr("status");
+                        if(status=="变更申请中"){
+                         location.href="checkChangeArchive?id="+id;
+                        }else{
+                            location.href="checkArchive?id="+id;
+                        }
+
+                    }
+                })
+            });
+        </script>
 		<!-- jQuery -->
          <script src="js/datepicker/daterangepicker.js"></script>
         <script src="js/moment/moment.min.js"></script>
