--- a/src/main/resources/templates/positionAdd.html
+++ b/src/main/resources/templates/positionAdd.html
@@ -78,37 +78,36 @@
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">职位描述 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="posDec">职位描述 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
+									<textarea id="posDec" required="required" name="posDec" class="form-control col-md-7 col-xs-12"></textarea>
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">备注 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">备注 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
+									<textarea id="remark" required="required" name="remark" class="form-control col-md-7 col-xs-12"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">是否启用 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="enable">是否启用 <span class="required">*</span>
                         		</label>
-							<input type="checkbox" class="flat" name="table_records" style="position: absolute; opacity: 0;">
+							<input type="checkbox" class="flat" id="enable" name="enable" style="position: absolute; opacity: 0;">
 										 Checked
 
                           </div>
                           
                       <div class="form-group ">
                         <div class="col-md-6 col-md-offset-3 ">
-                        	
+
                           <button type="submit " class="btn btn-primary ">返回</button>
-                          
+
                         </div>
                       </div>
 		
-                        </div>
-                      </div>
+
 	<!-- jQuery -->
     <script src="../vendors/jquery/dist/jquery.min.js "></script>
     <!-- Bootstrap -->
