--- a/src/main/resources/templates/registerList.html
+++ b/src/main/resources/templates/registerList.html
@@ -84,21 +84,25 @@
 						</div>
 					</div>
 				</li>
-				<li>
+				<li style="width: 700px;">
 					<div class="form-group">
 						<label class="control-label col-md-3 col-sm-3 col-xs-12">建档时间:</label>
 						<div class="col-md-6 col-sm-6 col-xs-12">
-
 							<fieldset>
 								<div class="control-group">
 									<div class="controls">
-										<div class="input-prepend input-group">
-											<span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
-											<input type="text" style="width:200px" name="createDate" id="reservation" class="form-control" value="">
+										<div class="col-md-11 xdisplay_inputx form-group has-feedback">
+											<input type="text"
+												   class="form-control has-feedback" id="single_cal2" name="beginTime" aria-describedby="inputSuccess2Status2">
+												至
+											<input type="text"
+												   class="form-control has-feedback" id="single_cal3"  name="endTime" aria-describedby="inputSuccess3Status3">
+
 										</div>
 									</div>
 								</div>
 							</fieldset>
+
 						</div>
 					</div>
 				</li>
@@ -106,19 +110,22 @@
 
 					<div class="form-group">
 						<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-							<button type="submit" class="btn btn-success">查询</button>
+							<button type="submit" id="slt" name="slt" class="btn btn-success">查询</button>
 						</div>
 					</div>
 				</li>
 			</ul>
 
 		</form> &nbsp;&nbsp;&nbsp;
-		<a th:href="@{/addArchive}">
+
+			<a th:href="@{/addArchive}">
 			<button type="button" class="btn btn-round btn-info">
 				<font style="vertical-align: inherit;"><font style="vertical-align: inherit;">档案登记</font>
 				</font>
 			</button>
-		</a><br/><br/>
+			</a>
+
+
                     <div class="col-sm-12"><table id="datatable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="datatable_info">
                       <thead>
                         <tr role="row">
@@ -208,11 +215,10 @@
 							</td>
 							<td th:if="${user.getUserRoleName()}=='人事经理'">
 								<font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-									<!--<a th:if="${archive.reviewStatuss}=='起草' or ${archive.reviewStatuss}=='驳回'" th:href="@{/modifyArchive(id=${archive.id})}">修改</a>&nbsp;&nbsp;
-									<a th:if="${archive.reviewStatuss}=='通过' or ${archive.reviewStatuss}=='变更'" th:href="@{/changeArchive(id=${archive.id})}">变更</a>
-									-->
 									<span th:if="${archive.isdeletes}!='已删除'">
-										<a th:if="${archive.reviewStatuss}=='审核中'" th:href="@{/checkArchive(id=${archive.id})}">复核</a>
+                                        <!--<a th:if="${archive.reviewStatuss}=='起草' or ${archive.reviewStatuss}=='驳回'" th:href="@{/modifyArchive(id=${archive.id})}">修改</a>&nbsp;&nbsp;
+									    <a th:if="${archive.reviewStatuss}=='通过' or ${archive.reviewStatuss}=='变更'" th:href="@{/changeArchive(id=${archive.id})}">变更</a>
+										--><a th:if="${archive.reviewStatuss}=='审核中'" th:href="@{/checkArchive(id=${archive.id})}">复核</a>
 										<a th:if="${archive.reviewStatuss}=='变更申请中'" th:href="@{/checkChangeArchive(id=${archive.id})}">变更复核</a>
 										<a th:href="@{/archiveView(id=${archive.id})}">明细</a>&nbsp;&nbsp;
 										<a th:if="${archive.reviewStatuss}!='审核中' and ${archive.reviewStatuss}!='变更申请中'" th:href="@{/delReg(id=${archive.id})}">删除</a>
@@ -272,7 +278,7 @@
         	</div>
         </div>
          
-                  </div>
+	</div>
 
 <!--分页-->
 	<script th:src="@{/js/jquery.js}"></script>
@@ -281,7 +287,9 @@
 			frm.pageIndex.value = num;
 			frm.submit();
 		}
+
 		$(function(){
+
 			$(".deleteReg").click(function(){
 				if(confirm("是否要删除？")) {
 					var athis = $(this);
@@ -290,7 +298,8 @@
 						if (data == "true") {
 							alert("删除成功！");
 							//删除当前行
-							athis.parent().parent().remove();
+							athis.parent().parent().parent().parent().parent().parent().parent().remove();
+                            window.location.reload();
 						} else {
 							alert("删除失败!");
 						}
@@ -735,232 +744,8 @@
 	</script>
 	<!-- /jQuery Knob -->
 
-	<!-- Cropper -->
-	<script>
-		$(document).ready(function() {
-			var $image = $('#image');
-			var $download = $('#download');
-			var $dataX = $('#dataX');
-			var $dataY = $('#dataY');
-			var $dataHeight = $('#dataHeight');
-			var $dataWidth = $('#dataWidth');
-			var $dataRotate = $('#dataRotate');
-			var $dataScaleX = $('#dataScaleX');
-			var $dataScaleY = $('#dataScaleY');
-			var options = {
-				aspectRatio: 16 / 9,
-				preview: '.img-preview',
-				crop: function (e) {
-					$dataX.val(Math.round(e.x));
-					$dataY.val(Math.round(e.y));
-					$dataHeight.val(Math.round(e.height));
-					$dataWidth.val(Math.round(e.width));
-					$dataRotate.val(e.rotate);
-					$dataScaleX.val(e.scaleX);
-					$dataScaleY.val(e.scaleY);
-				}
-			};
 
 
-			// Tooltip
-			$('[data-toggle="tooltip"]').tooltip();
-
-
-			// Cropper
-			$image.on({
-				'build.cropper': function (e) {
-					console.log(e.type);
-				},
-				'built.cropper': function (e) {
-					console.log(e.type);
-				},
-				'cropstart.cropper': function (e) {
-					console.log(e.type, e.action);
-				},
-				'cropmove.cropper': function (e) {
-					console.log(e.type, e.action);
-				},
-				'cropend.cropper': function (e) {
-					console.log(e.type, e.action);
-				},
-				'crop.cropper': function (e) {
-					console.log(e.type, e.x, e.y, e.width, e.height, e.rotate, e.scaleX, e.scaleY);
-				},
-				'zoom.cropper': function (e) {
-					console.log(e.type, e.ratio);
-				}
-			}).cropper(options);
-
-
-			// Buttons
-			if (!$.isFunction(document.createElement('canvas').getContext)) {
-				$('button[data-method="getCroppedCanvas"]').prop('disabled', true);
-			}
-
-			if (typeof document.createElement('cropper').style.transition === 'undefined') {
-				$('button[data-method="rotate"]').prop('disabled', true);
-				$('button[data-method="scale"]').prop('disabled', true);
-			}
-
-
-			// Download
-			if (typeof $download[0].download === 'undefined') {
-				$download.addClass('disabled');
-			}
-
-
-			// Options
-			$('.docs-toggles').on('change', 'input', function () {
-				var $this = $(this);
-				var name = $this.attr('name');
-				var type = $this.prop('type');
-				var cropBoxData;
-				var canvasData;
-
-				if (!$image.data('cropper')) {
-					return;
-				}
-
-				if (type === 'checkbox') {
-					options[name] = $this.prop('checked');
-					cropBoxData = $image.cropper('getCropBoxData');
-					canvasData = $image.cropper('getCanvasData');
-
-					options.built = function () {
-						$image.cropper('setCropBoxData', cropBoxData);
-						$image.cropper('setCanvasData', canvasData);
-					};
-				} else if (type === 'radio') {
-					options[name] = $this.val();
-				}
-
-				$image.cropper('destroy').cropper(options);
-			});
-
-
-			// Methods
-			$('.docs-buttons').on('click', '[data-method]', function () {
-				var $this = $(this);
-				var data = $this.data();
-				var $target;
-				var result;
-
-				if ($this.prop('disabled') || $this.hasClass('disabled')) {
-					return;
-				}
-
-				if ($image.data('cropper') && data.method) {
-					data = $.extend({}, data); // Clone a new one
-
-					if (typeof data.target !== 'undefined') {
-						$target = $(data.target);
-
-						if (typeof data.option === 'undefined') {
-							try {
-								data.option = JSON.parse($target.val());
-							} catch (e) {
-								console.log(e.message);
-							}
-						}
-					}
-
-					result = $image.cropper(data.method, data.option, data.secondOption);
-
-					switch (data.method) {
-						case 'scaleX':
-						case 'scaleY':
-							$(this).data('option', -data.option);
-							break;
-
-						case 'getCroppedCanvas':
-							if (result) {
-
-								// Bootstrap's Modal
-								$('#getCroppedCanvasModal').modal().find('.modal-body').html(result);
-
-								if (!$download.hasClass('disabled')) {
-									$download.attr('href', result.toDataURL());
-								}
-							}
-
-							break;
-					}
-
-					if ($.isPlainObject(result) && $target) {
-						try {
-							$target.val(JSON.stringify(result));
-						} catch (e) {
-							console.log(e.message);
-						}
-					}
-
-				}
-			});
-
-			// Keyboard
-			$(document.body).on('keydown', function (e) {
-				if (!$image.data('cropper') || this.scrollTop > 300) {
-					return;
-				}
-
-				switch (e.which) {
-					case 37:
-						e.preventDefault();
-						$image.cropper('move', -1, 0);
-						break;
-
-					case 38:
-						e.preventDefault();
-						$image.cropper('move', 0, -1);
-						break;
-
-					case 39:
-						e.preventDefault();
-						$image.cropper('move', 1, 0);
-						break;
-
-					case 40:
-						e.preventDefault();
-						$image.cropper('move', 0, 1);
-						break;
-				}
-			});
-
-			// Import image
-			var $inputImage = $('#inputImage');
-			var URL = window.URL || window.webkitURL;
-			var blobURL;
-
-			if (URL) {
-				$inputImage.change(function () {
-					var files = this.files;
-					var file;
-
-					if (!$image.data('cropper')) {
-						return;
-					}
-
-					if (files && files.length) {
-						file = files[0];
-
-						if (/^image\/\w+$/.test(file.type)) {
-							blobURL = URL.createObjectURL(file);
-							$image.one('built.cropper', function () {
-
-								// Revoke when load complete
-								URL.revokeObjectURL(blobURL);
-							}).cropper('reset').cropper('replace', blobURL);
-							$inputImage.val('');
-						} else {
-							window.alert('Please choose an image file.');
-						}
-					}
-				});
-			} else {
-				$inputImage.prop('disabled', true).parent().addClass('disabled');
-			}
-		});
-	</script>
 
 	</body>
 </html>
